--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,13 @@ permalink: /posts/:title
 rdiscount:
   extensions: [smart]
 exclude: [ Gemfile, Gemfile.lock, gems, _assets, bower_components ]
-title : Carlos Becker
-production_url : http://carlosbecker.com
-description: "Througths, flamewars, utilities, tutorials, codes, projects and other things by Carlos Alexandro Becker."
-disqus_shortname: caarlos0blog
-analytics: UA-32899481-1
-gauges: 50f2b533613f5d7c8000000c
+title : Shankai Ji
+production_url : http://skji.github.co
+description: "Somethings by Shankai Ji."
+disqus_shortname: skjiblog
+analytics: UA-47846061-1
 author :
-  name : Carlos Alexandro Becker
-  github : caarlos0
-  twitter : caarlos0
-  email: caarlos0@gmail.com
+  name : Shankai Ji
+  github : skji
+  twitter : jishankai
+  email: jishankai@gmail.com
